--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -12,3 +12,10 @@ jobs:
         run: |
           node -v
           npm -v
+      - name: running on python shell
+        run: |
+          import os
+          import platform
+          print(os.environ['PATH'])
+          print(platform.processor())
+        shell: python
