Clone a git repo
Clone a git repo

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -6,10 +6,16 @@ jobs:
   run-github-actions:
     runs-on: ubuntu-latest
     steps:
-      - name: run javascript action
+      - name: Clone a git repo
+        uses: actions/checkout@v2
+      - name: List Files after checkout
+        run: |
+          pwd
+          ls -al
+      - name: Run javascript action
         id: greet
         uses: actions/hello-world-javascript-action@v1
         with:
           who-to-greet: Bhagya
-      - name: get output of step1
+      - name: Get output of step1
         run: echo "${{ steps.greet.outputs.time }}"
