--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,6 +1,9 @@
 name: Action Workflow
 
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+    types: [opened,reopened,closed,assigned]
 
 jobs:
   run-github-actions:
