Adding Cron Expression
Adding Cron Expression

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,7 +1,9 @@
 name: Action Workflow
 
 on:
-  push:
+  # push:
+  schedule:
+    - cron: "* * * * *"
   pull_request:
     types: [opened,reopened,closed,assigned]
 
