--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,9 +1,10 @@
 name: Action Workflow
 
 on:
-  # push:
   schedule:
-    - cron: "* * * * *"
+    - cron: "0/5 * * * *"
+    - cron: "0/6 * * * *"
+  # push:
   pull_request:
     types: [opened,reopened,closed,assigned]
 
