--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,12 +1,20 @@
 name: Action Workflow
 
 on:
-  schedule:
-    - cron: "0/5 * * * *"
-    - cron: "0/6 * * * *"
+  push:
+    branches:
+      - master
+      - test*
+  # pull_request:
+  #   branches:
+  #     - master
+  # repository_dispatch:
+  # schedule:
+  #   - cron: "0/5 * * * *"
+  #   - cron: "0/6 * * * *"
   # push:
-  pull_request:
-    types: [opened,reopened,closed,assigned]
+  # pull_request:
+  #   types: [opened,reopened,closed,assigned]
 
 jobs:
   run-github-actions:
